[package]
name = "tower-defense-bevy-excercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
hexx = "0.6"
bevy_egui = "0.20"
rand = "0.8"
crossbeam-channel = "0.5"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"

[profile.dev.package."*"]
opt-level = 3
